Added enchanted books to nether fortress loot. Made non structure enchanted books rarer. Increased level of min. enchanted books. Nether fortress chests can now contain any piece of golden armour.